[package]
name = "kin-portfolio-rebalancer-gui"
version = "0.1.0"
edition = "2024"
authors = ["Junhan Sui"]
description = "GUI for kin portfolio rebalancer"

[dependencies]
eframe = "0.31.1"
egui = "0.31.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.28.0", features = ["full"] }
dirs = "5.0.1"
chrono = "0.4.26"
